[gd_scene load_steps=4 format=3 uid="uid://cvwcuqqutjq4r"]

[ext_resource type="Script" path="res://test/pick_test.gd" id="1_mtblv"]
[ext_resource type="PackedScene" uid="uid://dcw2u1wjgyjt7" path="res://character/player/player.tscn" id="2_chdy4"]
[ext_resource type="PackedScene" uid="uid://c00ecivngyaml" path="res://gui/inventory_ui.tscn" id="3_0pq3o"]

[node name="Test" type="Node2D"]
script = ExtResource("1_mtblv")

[node name="Player" parent="." instance=ExtResource("2_chdy4")]

[node name="ItemPosition" type="Marker2D" parent="."]
position = Vector2(24, 32)

[node name="EquipmentPosition" type="Marker2D" parent="."]
position = Vector2(16, 32)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InventoryUI" parent="CanvasLayer" instance=ExtResource("3_0pq3o")]
